added some more functionality

--- a/app/src/main/res/layout/activity_open_url.xml
+++ b/app/src/main/res/layout/activity_open_url.xml
@@ -1,5 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<im.delight.android.webview.AdvancedWebView
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    >
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/toolbar"
+        android:background="@color/themeColor"
+        android:elevation="4dp"
+        android:theme="@style/ToolBarStyle"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        />
+
+    <im.delight.android.webview.AdvancedWebView
     android:id="@+id/urlWebView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,3 +26,5 @@
     tools:layout_editor_absoluteX="8dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" />
+
+</LinearLayout>
