--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,8 +5,27 @@
         android:id="@+id/menu_item_search"
         app:actionViewClass="android.widget.SearchView"
         android:icon="@drawable/search_icon"
-        app:showAsAction="always"
-        android:title="Search">
+        app:showAsAction = "always"
+        android:title="@string/search"
+        android:iconifiedByDefault = "false"
+         >
     </item>
+    <item
+        android:title="@string/my_account"
+        >
+
+    </item>
+    <item
+        android:title="@string/wishlist"
+        >
+
+    </item>
+    <item
+        android:title="@string/my_cart"
+        >
+
+    </item>
+
+
 </menu>
 
