--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -12,9 +12,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.eshopkashmir.eshopkashmir.LauncherActivity">
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/toolbar"
+            android:background="@color/themeColor"
+            android:elevation="4dp"
+            android:theme="@style/ToolBarStyle"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            />
 
 
-    <RelativeLayout
+
+        <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
@@ -34,14 +46,15 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:src="@drawable/logo"
+        android:id="@+id/logo"
         />
 
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/site_description"
-        />
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/site_description"-->
+        <!--/>-->
 
         <TextView
             android:layout_width="wrap_content"
@@ -62,6 +75,5 @@
             android:id="@+id/recyclerView"
             >
         </android.support.v7.widget.RecyclerView>
-
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
