--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/row_layout"
+    android:paddingTop="10dp"
+    android:layout_margin="5dp"
+    android:background="@color/themeColorAlpha"
+    >
+
     <ImageView
         android:id="@+id/img_category"
         android:adjustViewBounds="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="5dp"
+        android:layout_gravity="center"
+        />
     <TextView
         android:id="@+id/text_category"
         android:layout_gravity="center"
-        android:textColor="#000000"
+        android:textColor="@color/white"
         android:textStyle="bold"
+        android:textSize="15sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="5dp"/>
 
 </LinearLayout>
