--- a/app/src/main/res/drawable/ic_specials.xml
+++ b/app/src/main/res/drawable/ic_specials.xml
@@ -1,15 +1,15 @@
 <vector android:height="24dp" android:viewportHeight="463.0"
     android:viewportWidth="463.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFF" android:pathData="M351.5,0h-240C98.5,0 88,10.5 88,23.5v432c0,4.1 3.4,7.5 7.5,7.5h32c4.1,0 7.5,-3.4 7.5,-7.5V399h193v56.5c0,4.1 3.4,7.5 7.5,7.5h32c4.1,0 7.5,-3.4 7.5,-7.5v-432C375,10.5 364.5,0 351.5,0zM120,448h-17v-50.6c2.6,1 5.5,1.6 8.5,1.6h8.5V448zM360,448h-17v-49h8.5c3,0 5.9,-0.6 8.5,-1.6V448zM360,375.5c0,4.7 -3.8,8.5 -8.5,8.5h-240c-4.7,0 -8.5,-3.8 -8.5,-8.5v-352c0,-4.7 3.8,-8.5 8.5,-8.5h240c4.7,0 8.5,3.8 8.5,8.5V375.5z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M175.5,103h112c13,0 23.5,-10.5 23.5,-23.5S300.5,56 287.5,56h-112C162.5,56 152,66.5 152,79.5S162.5,103 175.5,103zM175.5,71h112c4.7,0 8.5,3.8 8.5,8.5s-3.8,8.5 -8.5,8.5h-112c-4.7,0 -8.5,-3.8 -8.5,-8.5S170.8,71 175.5,71z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M183.5,120c-4.1,0 -7.5,3.4 -7.5,7.5c0,4.1 3.4,7.5 7.5,7.5h96c4.1,0 7.5,-3.4 7.5,-7.5c0,-4.1 -3.4,-7.5 -7.5,-7.5H183.5z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M135.5,183h176c4.1,0 7.5,-3.4 7.5,-7.5c0,-4.1 -3.4,-7.5 -7.5,-7.5h-176c-4.1,0 -7.5,3.4 -7.5,7.5C128,179.6 131.4,183 135.5,183z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M135.5,215h112c4.1,0 7.5,-3.4 7.5,-7.5c0,-4.1 -3.4,-7.5 -7.5,-7.5h-112c-4.1,0 -7.5,3.4 -7.5,7.5C128,211.6 131.4,215 135.5,215z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M327.5,200h-16c-4.1,0 -7.5,3.4 -7.5,7.5c0,4.1 3.4,7.5 7.5,7.5h16c4.1,0 7.5,-3.4 7.5,-7.5C335,203.4 331.6,200 327.5,200z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M135.5,247h176c4.1,0 7.5,-3.4 7.5,-7.5c0,-4.1 -3.4,-7.5 -7.5,-7.5h-176c-4.1,0 -7.5,3.4 -7.5,7.5C128,243.6 131.4,247 135.5,247z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M135.5,279h112c4.1,0 7.5,-3.4 7.5,-7.5c0,-4.1 -3.4,-7.5 -7.5,-7.5h-112c-4.1,0 -7.5,3.4 -7.5,7.5C128,275.6 131.4,279 135.5,279z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M327.5,264h-16c-4.1,0 -7.5,3.4 -7.5,7.5c0,4.1 3.4,7.5 7.5,7.5h16c4.1,0 7.5,-3.4 7.5,-7.5C335,267.4 331.6,264 327.5,264z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M135.5,311h176c4.1,0 7.5,-3.4 7.5,-7.5c0,-4.1 -3.4,-7.5 -7.5,-7.5h-176c-4.1,0 -7.5,3.4 -7.5,7.5C128,307.6 131.4,311 135.5,311z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M247.5,328h-112c-4.1,0 -7.5,3.4 -7.5,7.5c0,4.1 3.4,7.5 7.5,7.5h112c4.1,0 7.5,-3.4 7.5,-7.5C255,331.4 251.6,328 247.5,328z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M327.5,328h-16c-4.1,0 -7.5,3.4 -7.5,7.5c0,4.1 3.4,7.5 7.5,7.5h16c4.1,0 7.5,-3.4 7.5,-7.5C335,331.4 331.6,328 327.5,328z"/>
+    <path android:fillColor="#036AF5" android:pathData="M351.5,0h-240C98.5,0 88,10.5 88,23.5v432c0,4.1 3.4,7.5 7.5,7.5h32c4.1,0 7.5,-3.4 7.5,-7.5V399h193v56.5c0,4.1 3.4,7.5 7.5,7.5h32c4.1,0 7.5,-3.4 7.5,-7.5v-432C375,10.5 364.5,0 351.5,0zM120,448h-17v-50.6c2.6,1 5.5,1.6 8.5,1.6h8.5V448zM360,448h-17v-49h8.5c3,0 5.9,-0.6 8.5,-1.6V448zM360,375.5c0,4.7 -3.8,8.5 -8.5,8.5h-240c-4.7,0 -8.5,-3.8 -8.5,-8.5v-352c0,-4.7 3.8,-8.5 8.5,-8.5h240c4.7,0 8.5,3.8 8.5,8.5V375.5z"/>
+    <path android:fillColor="#036AF5" android:pathData="M175.5,103h112c13,0 23.5,-10.5 23.5,-23.5S300.5,56 287.5,56h-112C162.5,56 152,66.5 152,79.5S162.5,103 175.5,103zM175.5,71h112c4.7,0 8.5,3.8 8.5,8.5s-3.8,8.5 -8.5,8.5h-112c-4.7,0 -8.5,-3.8 -8.5,-8.5S170.8,71 175.5,71z"/>
+    <path android:fillColor="#036AF5" android:pathData="M183.5,120c-4.1,0 -7.5,3.4 -7.5,7.5c0,4.1 3.4,7.5 7.5,7.5h96c4.1,0 7.5,-3.4 7.5,-7.5c0,-4.1 -3.4,-7.5 -7.5,-7.5H183.5z"/>
+    <path android:fillColor="#036AF5" android:pathData="M135.5,183h176c4.1,0 7.5,-3.4 7.5,-7.5c0,-4.1 -3.4,-7.5 -7.5,-7.5h-176c-4.1,0 -7.5,3.4 -7.5,7.5C128,179.6 131.4,183 135.5,183z"/>
+    <path android:fillColor="#036AF5" android:pathData="M135.5,215h112c4.1,0 7.5,-3.4 7.5,-7.5c0,-4.1 -3.4,-7.5 -7.5,-7.5h-112c-4.1,0 -7.5,3.4 -7.5,7.5C128,211.6 131.4,215 135.5,215z"/>
+    <path android:fillColor="#036AF5" android:pathData="M327.5,200h-16c-4.1,0 -7.5,3.4 -7.5,7.5c0,4.1 3.4,7.5 7.5,7.5h16c4.1,0 7.5,-3.4 7.5,-7.5C335,203.4 331.6,200 327.5,200z"/>
+    <path android:fillColor="#036AF5" android:pathData="M135.5,247h176c4.1,0 7.5,-3.4 7.5,-7.5c0,-4.1 -3.4,-7.5 -7.5,-7.5h-176c-4.1,0 -7.5,3.4 -7.5,7.5C128,243.6 131.4,247 135.5,247z"/>
+    <path android:fillColor="#036AF5" android:pathData="M135.5,279h112c4.1,0 7.5,-3.4 7.5,-7.5c0,-4.1 -3.4,-7.5 -7.5,-7.5h-112c-4.1,0 -7.5,3.4 -7.5,7.5C128,275.6 131.4,279 135.5,279z"/>
+    <path android:fillColor="#036AF5" android:pathData="M327.5,264h-16c-4.1,0 -7.5,3.4 -7.5,7.5c0,4.1 3.4,7.5 7.5,7.5h16c4.1,0 7.5,-3.4 7.5,-7.5C335,267.4 331.6,264 327.5,264z"/>
+    <path android:fillColor="#036AF5" android:pathData="M135.5,311h176c4.1,0 7.5,-3.4 7.5,-7.5c0,-4.1 -3.4,-7.5 -7.5,-7.5h-176c-4.1,0 -7.5,3.4 -7.5,7.5C128,307.6 131.4,311 135.5,311z"/>
+    <path android:fillColor="#036AF5" android:pathData="M247.5,328h-112c-4.1,0 -7.5,3.4 -7.5,7.5c0,4.1 3.4,7.5 7.5,7.5h112c4.1,0 7.5,-3.4 7.5,-7.5C255,331.4 251.6,328 247.5,328z"/>
+    <path android:fillColor="#036AF5" android:pathData="M327.5,328h-16c-4.1,0 -7.5,3.4 -7.5,7.5c0,4.1 3.4,7.5 7.5,7.5h16c4.1,0 7.5,-3.4 7.5,-7.5C335,331.4 331.6,328 327.5,328z"/>
 </vector>
