--- a/app/src/main/res/layout/activity_open_url.xml
+++ b/app/src/main/res/layout/activity_open_url.xml
@@ -12,7 +12,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/toolbar"
-        android:background="@color/themeColor"
+        android:background="#248DCD"
         android:elevation="4dp"
         android:theme="@style/ToolBarStyle"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
