--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -6,10 +6,14 @@
     android:id="@+id/row_layout"
     android:paddingTop="10dp"
     android:layout_margin="5dp"
-    android:background="@color/themeColorAlpha"
-    >
+    android:background="@drawable/color"
+     >
 
-    <ImageView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
         android:id="@+id/img_category"
         android:adjustViewBounds="true"
         android:layout_width="50dp"
@@ -17,14 +21,14 @@
         android:padding="5dp"
         android:layout_gravity="center"
         />
-    <TextView
+        <TextView
         android:id="@+id/text_category"
         android:layout_gravity="center"
-        android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="15sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"/>
+    </LinearLayout>
 
 </LinearLayout>
