--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -29,26 +29,29 @@
 
 
         <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-        <android.support.v4.view.ViewPager
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+            <android.support.v4.view.ViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="135dp"
             />
         <me.relex.circleindicator.CircleIndicator
             android:id="@+id/indicator"
             android:layout_width="match_parent"
-            android:layout_height="48dp"/>
+            android:layout_height="20dp"/>
     </RelativeLayout>
 
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
         android:src="@drawable/eshopkashmir"
         android:id="@+id/logo"
+        android:scaleType="fitXY"
+        android:layout_gravity="center"
         />
 
 
@@ -57,18 +60,57 @@
         <!--android:layout_height="wrap_content"-->
         <!--android:text="@string/site_description"-->
         <!--/>-->
-
-        <TextView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:padding="5dp"
+        >
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5sp"
-            android:layout_marginTop="10dp"
+            android:layout_weight="4"
+            >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
             android:text="@string/categories"
             android:textColor="@android:color/black"
             android:textSize="30sp"
             android:textStyle="bold"
             android:fontFamily="casual"
             />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_weight="1"
+            >
+        <ImageView
+            android:id="@+id/facebook"
+            android:layout_width="60dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
+            android:padding="5dp"
+            android:src="@drawable/facebook_icon"
+
+            />
+        <ImageView
+            android:id="@+id/instagram"
+            android:layout_width="60dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
+            android:padding="5dp"
+            android:src="@drawable/instagram_icon"
+            />
+        </LinearLayout>
+
+    </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
