--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -1,34 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/row_layout"
-    android:paddingTop="10dp"
-    android:layout_margin="5dp"
+    android:paddingTop="5dp"
+    android:layout_margin="3dp"
     android:background="@drawable/color"
      >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <RelativeLayout
+        android:layout_width="80dp"
+        android:layout_height="70dp"
+        android:layout_gravity="center"
+        >
 
         <ImageView
-        android:id="@+id/img_category"
-        android:adjustViewBounds="true"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:padding="5dp"
-        android:layout_gravity="center"
-        />
+            android:id="@+id/img_category"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:adjustViewBounds="true"
+            android:padding="3dp"
+            android:layout_centerHorizontal="true"
+
+            />
+
         <TextView
-        android:id="@+id/text_category"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="5dp"/>
-    </LinearLayout>
+            android:id="@+id/text_category"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/img_category"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:padding="3dp"
+            android:textAlignment="center"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
 </LinearLayout>
